deployment/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx-ingress
  annotations:
       ingressClass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: pipeline-deployment
  annotations:
       nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-ingress
  tls:
  - hosts:
    - focus617.com
    secretName: myapp-secret-tls
  rules:
  - host: focus617.com
    http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 80
